kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-calulator
  labels:
    app: pod-calulator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-calulator
  template:
    metadata:
      labels:
        app: pod-calulator
    spec:
      containers:
      - name: pod-calulator
        image: ghcr.io/ssibbya/devsecops-podcalc:sha-733a9c0744b624787e6b0adfe397dd7ec3339941
        # Image will be automatically updated by CI/CD pipeline
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: github-container-registry
