kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-calulator
  labels:
    app: pod-calulator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: pod-calulator
